# gauge-ai

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md
.claude/skills/rust/: SKILL.md
.claude/skills/tui/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  update_dep.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
migrations/: 0001_init.sql
specs/001-gauge-ai-tui-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gauge-ai-tui-app/checklists/: requirements.md
specs/001-gauge-ai-tui-app/contracts/: command-contract.md  merge-contract.md
src/: lib.rs  main.rs
src/ai/: client.rs  health.rs  knowledge_base.rs  mod.rs  normalize.rs  query.rs  queue.rs
src/app/: commands.rs  config.rs  error.rs  events.rs  ingest.rs  jobs.rs  logging.rs  mod.rs  perf.rs  state.rs
src/cache/: filesystem.rs  mod.rs
src/export/: archive.rs  csv.rs  json.rs  mod.rs
src/scraper/: caching_decorator.rs  mod.rs  registry.rs  traits.rs
src/scraper/manufacturers/: mod.rs
src/storage/: db.rs  migrations.rs  mod.rs  models.rs  vector.rs
src/tui/: layout.rs  logo.rs  mod.rs  widgets.rs
tests/: contract.rs  integration.rs  unit.rs
tests/contract/: command_contract.rs
tests/integration/: export_flow.rs  export_missing_images.rs  header_health_view.rs  latest_flow.rs  latest_health_guard.rs  latest_targeted_errors.rs  query_flow.rs  query_health_guard.rs  scrape_cache_hit.rs  scrape_flow.rs  scrape_health_guard.rs  setup_flow.rs
tests/unit/: command_autocomplete_tests.rs  health_state_tests.rs  knowledge_base_tests.rs  perf_benchmarks.rs
