[package]
name = "gauge-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.22", features = ["toml"] }
crossterm = "0.29.0"
digest = "0.11.2"
directories = "6.0.0"
ollama-rs = "0.3.4"
ratatui = "0.30.0"
ratatui-image = "10.0.6"
reqwest = "0.13.2"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "json"] }
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tui-input = "0.15.3"
zip = "8.5.1"
