[package]
name = "gauge-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.22", features = ["toml"] }
crossterm = "0.29.0"
digest = "0.11.3"
directories = "6.0.0"
ollama-rs = "0.3.4"
ratatui = "0.30.0"
ratatui-image = "10.0.8"
reqwest = "0.13.3"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "json"] }
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tui-input = "0.15.3"
zip = "8.6.0"
